--- a/backend/.env
+++ b/backend/.env
@@ -6,8 +6,8 @@ PORT=5000
 
 
 # Email Configuration
-EMAIL=diveshdivesh1222@gmail.com
-APP_PASSWORD=cyqjtcpohreqggxk
+EMAIL=jfinder424@gmail.com
+APP_PASSWORD=okgxzqkasemfrhhx
 
 S3BucketURl=https://cvdrivebucket.s3.us-east-1.amazonaws.com/
 CandidateEmail=hansisewwandi0824@gmail.com
